@@ -4,7 +4,6 @@ Regarding LP & ILP:
 Critical bugs:
   * fix crash: INT constraints support
   * fix crash: MPS import when a model has already defined
-  * fix bug: check that target cell contains a formula
   * fix bug: check that constraint LHS contains a number value
   * fix bug: check that constraint RHS is a number value
   * fix bug: solver parameters when the sheet is duplicated
